The Chuckle Factory - V0.4 Description: Style.css: Description: Added some basic styling to the HTML page. Also, all the code has been #Commented for explination and easy to understand for the Developers.
*More Updates Coming*

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,7 @@ DOCTYPE declaration specifies that this is an HTML document
     <!-- Link to a CSS stylesheet for the document -->
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
+
 <body>
     <!-- Header with a heading element -->
     <header>
@@ -34,7 +35,7 @@ DOCTYPE declaration specifies that this is an HTML document
 
             <!-- Div element with a class of "image-caption" containing a caption for the image -->
             <div class="image-caption">
-                <p>A random image from Unsplash</p>
+                <p>Random Images from Unsplash</p>
             </div>
 
             <!-- Button element with the text "Get Joke" -->
