The Chuckle Factory - V0.7 Description: About, Category and Search HTML pages created. Each page will include their own uniques functionality. At the moment the Category section is in the Index page but in the upcoming updates. It will be transfered to Category page.
Few AJAX code implemented in the script.js

*More Updates Coming*

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,6 +23,14 @@
     <!-- Header with a heading element -->
     <header>
         <h1>The Chuckle Factory</h1>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./category.html">Category</a></li>
+                <li><a href="./search.html">Search</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main content area -->
@@ -47,6 +55,15 @@
             </div>
 
             <ul id="categories"></ul>
+
+            <!--TEST ZONE-->
+            <div class="movie-text">
+                <button type="button" id="movie-button">Movie</button>
+                <p id="movie-text"></p>
+            </div>
+
+            <!--TEST ZONE-->
+            </select>
 
         </section>
     </main>
