The Chuckle Factory - V0.8 Description: 1) Created totally seperate CSS and JS files for each HTML Page, for example (about.html page has now about.css and about.js). i) This is done to dedicate each page to its own functionality and design pattern. i) All the uneccessary code from Index.html, style.css and script.js has been removed and only page related code hs been left there. i) And will apply to all the pages in the future update. As of now only Index and About page are are completed.
2) About page has been fully designed and mapped.
i) Sections created: About Us, Our History, Our Team, What our Fans are Saying and Sign Up for Our Newsletter.
i) Social Media links are created with the logos and linked to that social media page. (Currently, those links redirect the client to that social media home page)
i) About.js: Functionality added if the client insrts their Email and signs up for newsletter they will get a Pop-up on the webpage. (It will Pup-up as: Thank you for signing up for our newsletter!)

*More Updates Coming*

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/about.css">
 </head>
 
 <body>
@@ -23,12 +23,79 @@
     </header>
     <main>
         <!-- main content goes here -->
+        <!-- HERO IMAGE OR BANNER -->
+        <div class="hero-banner">
+            <img src="https://source.unsplash.com/random/200x200?sig=1" alt="MainImg">
+            <h1>Welcome to The Chuckle Factory</h1>
+        </div>
+
+        <!-- ABOUT SECTION -->
+        <section class="about-section">
+            <h2>About Us</h2>
+            <p>The Chuckle Factory is a comedy website that brings you the best jokes, memes, and videos from around the
+                internet. We're dedicated to finding and sharing the funniest content out there, and we hope you'll join
+                us in laughing along. Our team is made up of comedy enthusiasts who are always on the lookout for the
+                next big thing in the world of humor.</p>
+            <h3>Our History</h3>
+            <p>The Chuckle Factory was founded in 2020 by a group of friends who loved making each other laugh. They saw
+                an opportunity to share their love of comedy with a wider audience, and thus The Chuckle Factory was
+                born. Since then, we've grown into a thriving community of comedy lovers who come to us for their daily
+                dose of laughter.</p>
+            <h3>Our Team</h3>
+            <ul>
+                <li>Moeez Abdul - Founder</li>
+                <li>Friad Hamakhurshid - Head of Content</li>
+                <li>Rahmath Mozumder - Lead Developer</li>
+            </ul>
+        </section>
+
+        <!-- TESTIMONIALS SECTION -->
+        <section class="testimonials-section">
+            <h2>What Our Fans Are Saying</h2>
+            <div class="testimonial">
+                <img src="https://source.unsplash.com/random/200x200?sig=2" alt="user 1">
+                <p>"I love The Chuckle Factory! It's my go-to website for a quick laugh whenever I need it."</p>
+            </div>
+            <div class="testimonial">
+                <img src="https://source.unsplash.com/random/200x200?sig=3" alt="user 2">
+                <p>"The jokes on The Chuckle Factory are always fresh and hilarious. Keep up the good work!"</p>
+            </div>
+        </section>
+
+        <!-- NEWSLETTER SIGNUP FORM -->
+        <section class="newsletter-section">
+            <h2>Sign Up for Our Newsletter</h2>
+            <p>Get the latest jokes, memes, and videos delivered straight to your inbox!</p>
+            <form>
+                <label for="email-input">Email:</label>
+                <input type="email" id="email-input" placeholder="Enter your email address" />
+                <button type="submit">Sign Up</button>
+            </form>
+
+        </section>
+
+        <!-- SOCIAL MEDIA LINKS -->
+        <section class="social-section">
+            <h2>Follow Us</h2>
+            <ul>
+                <li><a href="https://www.facebook.com/"><img
+                            src="http://www.pancevo.rs/sadrzaj/uploads/2016/03/Facebook-logo.jpg"
+                            alt="facebook icon"></a></li>
+                <li><a href="https://twitter.com/"><img
+                            src="https://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"
+                            alt="twitter icon"></a></li>
+                <li><a href="https://www.instagram.com/"><img
+                            src="https://juliusdesign.net/sm-reference/img/instagram-logo.png" alt="instagram icon"></a>
+                </li>
+            </ul>
+        </section>
+
     </main>
     <footer>
         <!-- footer content goes here -->
         <p>Copyright &copy; 2022. All rights reserved by Moeez Abdul</p>
     </footer>
-    <script src="JS/script.js"></script>
+    <script src="JS/about.js"></script>
 </body>
 
 </html>
