--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,6 +37,7 @@
     <main>
         <!-- Section element containing the content -->
         <section class="content">
+            <h2>Random Joke Generator</h2>
             <!-- Image element with a random image from Unsplash -->
             <img src="https://source.unsplash.com/random/200x200?sig=1" alt="random" />
 
@@ -50,21 +51,10 @@
 
             <!-- Div element with the class "joke-box" containing a heading and a paragraph element -->
             <div class="joke-box">
-                <h2>Joke of the day</h2>
+                <h3>Joke of the day</h3>
                 <p id="joke-text"></p>
             </div>
-
-            <ul id="categories"></ul>
-
             <!--TEST ZONE-->
-            <div class="movie-text">
-                <button type="button" id="movie-button">Movie</button>
-                <p id="movie-text"></p>
-            </div>
-
-            <!--TEST ZONE-->
-            </select>
-
         </section>
     </main>
 
