--- a/HTML/search.html
+++ b/HTML/search.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Search</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/search.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <!-- footer content goes here -->
         <p>Copyright &copy; 2022. All rights reserved by Moeez Abdul</p>
     </footer>
-    <script src="JS/script.js"></script>
+    <script src="JS/search.js"></script>
 </body>
 
 </html>
