The Chuckle Factory - V0.9 Description: 1) Category page is now Complete visually and functionally. 2) I have implementeed three bttuons from the Categories, I have chosen onlu 3 as I just wanted to showcase how this works. 3) When clicked on the button, the jockes from that category will be displayed below the button. i) The category page is completed but there still option to improve but I have only implemented basics to cover criteria of my assignment.
1) Search page is now complete but there is few things which I wanted to change and improve.
i) I will not implement them as I will mentiones my thoughts in the report and what I would have exactly done to accomplish those tasks.
2) Search box created when searched for a topic and clicked after, It will shows all the jokes in the API related to that search.
i) There is major issues with that search box Like I would have prefered that if I search I can see releated jokes on the bottom and then have options to select from them.
i) Also, the search box is limited to serches. and MAx limit for the API is 10 Searches per hour.

1) I have also created a banner on the top to show that the page is under Maintenance
i) Everything is achived by using HTML, CSS, Javascript and Cors.

Spoiler: Next update we will comment all the code and make the webpage semantic.
Also, we will check for Accessibility, Standards, Display, Functionallity, Efficiency, Readability, and documentation of the Code.

*More Updates Coming*

--- a/HTML/category.html
+++ b/HTML/category.html
@@ -33,24 +33,32 @@
                 <p>Random Images from Unsplash</p>
             </div>
 
-            <!-- Button element with the text "Get Joke" -->
-            <button id="joke-button">Click Me!</button>
+            <h2>Categories:</h2>
 
-            <!-- Div element with the class "joke-box" containing a heading and a paragraph element -->
-            <div class="joke-box">
-                <h2>Joke of the day</h2>
-                <p id="joke-text"></p>
-            </div>
-
+            <!-- Movie Section - JOKE -->
             <ul id="categories"></ul>
-            <p id="joke-text"></p>
             <!--TEST ZONE-->
+            <button type="button" id="movie-button">Movie</button>
             <div class="movie-text">
-                <button type="button" id="movie-button">Movie</button>
                 <p id="movie-text"></p>
             </div>
 
+            <!-- Animal Section - JOKE -->
+            <ul id="categories"></ul>
             <!--TEST ZONE-->
+            <button type="button" id="animal-button">Animal</button>
+            <div class="animal-text">
+                <p id="animal-text"></p>
+            </div>
+
+            <!-- History Section - JOKE -->
+            <ul id="categories"></ul>
+            <!--TEST ZONE-->
+            <button type="button" id="history-button">History</button>
+            <div class="history-text">
+                <p id="history-text"></p>
+            </div>
+
         </section>
     </main>
     <footer>
