The Chuckle Factory - V0.9.1 Description: Minor Updates: All the code has been commented.
*More Updates Coming*

TASK TO DO!
1) Comment the Code. Completed
2) Make WebPage Semantic. Progress
3) Check for Accessibility. Progress
4) Check for Standards. Progress
5) Check for Display. Progress
6) Check for Functionallity. Progress
7) Check for Efficiency. Progress
8) Check for Readability. Progress

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -15,14 +15,19 @@
     <!-- Title of the document -->
     <title>The Chuckle Factory</title>
 
+    <!-- Link to a favicon for the document -->
+    <link rel="icon" href="https://source.unsplash.com/random/200x200?sig=1" />
+
     <!-- Link to a CSS stylesheet for the document -->
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
 <body>
-    <!-- Header with a heading element -->
+    <!-- Header with a logo and navigation menu -->
     <header>
+        <!-- Logo -->
         <h1>The Chuckle Factory</h1>
+        <!-- Navigation menu -->
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
@@ -37,12 +42,14 @@
     <main>
         <!-- Section element containing the content -->
         <section class="content">
+            <!-- Heading level 2 -->
             <h2>Random Joke Generator</h2>
             <!-- Image element with a random image from Unsplash -->
             <img src="https://source.unsplash.com/random/200x200?sig=1" alt="random" />
 
             <!-- Div element with a class of "image-caption" containing a caption for the image -->
             <div class="image-caption">
+                <!-- Paragraph element containing a caption for the image -->
                 <p>Random Images from Unsplash</p>
             </div>
 
@@ -51,21 +58,22 @@
 
             <!-- Div element with the class "joke-box" containing a heading and a paragraph element -->
             <div class="joke-box">
+                <!-- Heading level 3 -->
                 <h3>Joke of the day</h3>
+                <!-- Paragraph element to display the joke -->
                 <p id="joke-text"></p>
             </div>
-            <!--TEST ZONE-->
         </section>
     </main>
 
     <!-- Footer with a copyright notice -->
     <footer>
+        <!-- Paragraph element containing a copyright notice -->
         <p>Copyright &copy; 2022. All rights reserved by Moeez Abdul</p>
     </footer>
 
     <!-- Script element linking to a JavaScript file -->
     <script src="JS/script.js"></script>
-
 </body>
 
 </html>
