--- a/HTML/search.html
+++ b/HTML/search.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Search</title>
+    <link rel="icon" href="https://source.unsplash.com/random/200x200?sig=1">
     <link rel="stylesheet" href="CSS/search.css">
 </head>
 
@@ -31,7 +32,7 @@
         <!-- Section element containing the content -->
         <section class="content">
             <!-- Image element with a random image from Unsplash -->
-            <img src="https://source.unsplash.com/random/200x200?sig=2" alt="random" />
+            <img src="https://source.unsplash.com/random/200x200?sig=1" alt="random" />
 
             <!-- Div element with a class of "image-caption" containing a caption for the image -->
             <div class="image-caption">
@@ -39,7 +40,8 @@
             </div>
             <!-- Form for submitting the search query -->
             <p>Suggestion to Search for: Car, Teacher, Cat, Dog, Tree and Hospital</p>
-            <p>The API is Limited to the Topics so you can not Search for Anything. It will not display anything if there
+            <p>The API is Limited to the Topics so you can not Search for Anything. It will not display anything if
+                there
                 is no joke related to that Search.</p>
             <form id="search-form">
                 <input type="text" id="search-input" placeholder="Enter your search query">
