--- a/HTML/category.html
+++ b/HTML/category.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Category</title>
+    <link rel="icon" href="https://source.unsplash.com/random/200x200?sig=1">
+
     <link rel="stylesheet" href="CSS/category.css">
 </head>
 
