The Chuckle Factory - V1.0 Description: Task to do's have been completed and achived successfully.
Minor Updates:
Now:
1) Code Commented - Successfully
i) I have commented all the HTML, CSS and JS for Developers and Testers to Understand the Code Easily.
2) Code Semantically Implemented - Successfully
i) I have converted code (HTML) with Semantic Tags as much I could and I avoided Div tags as much as I could.
3) WebPage Checked for Accessibility - Successfully
i) I have used WAWE (Web Accessibility Evaluation Tool) to identify any issues with the Website and they have been fixed.
i) Also, all the webpages passes AAA in Color Contrast, ext Size and Large Text.
4) WebPage Checked for Standards - Successfully
i) I have checked Basic Standards for Website and they have been Implemented by Adjusting Color, Text and Images on the Webpage.
i) Standards and Guidlines Located from: https://designsystem.digital.gov/website-standards/
5) WebPage, Display Checked - Successfully
i)I have used "Inspect" = Ctrl+Shift+I and did several Test using Toggle Device Emulation.
i) LightHouse test was also Tested on the Webpage.
6) WebPage Checked for Functionallity - Successfully
i)I have used "Inspect" = Ctrl+Shift+I and I also tested my Website on 3 Different Search Engines (Microsfot Edge, Firefox and Google Chrome).
i) LightHouse test was also Tested on the Webpage for each Browser.
7) WebPage Checked for Efficiency - Successfully
i) Lighthouse Test Used
8) WebPage Checked for Readability - Successfully
i) WAWE and Lighthouse USed to Check this.

Before:
TASK TO DO!
1) Comment the Code. Completed
2) Make WebPage Semantic. Completed
3) Check for Accessibility. Completed
4) Check for Standards. Completed
5) Check for Display. Completed
6) Check for Functionallity. Completed
7) Check for Efficiency. Completed
8) Check for Readability. Completed

Must Read:
All of the Task mentioned above will be shocased in the Report with Images as Proof of me using these Softwares and Extensions.
Evert

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <button id="skip-button">Skip to content</button>
     <header>
         <h1>About - The Chuckle Factory</h1>
         <nav>
@@ -22,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <!-- main content goes here -->
         <!-- HERO IMAGE OR BANNER -->
         <div class="hero-banner">
