--- a/HTML/category.html
+++ b/HTML/category.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button id="skip-button">Skip to content</button>
     <header>
         <h1>Category - The Chuckle Factory</h1>
         <nav>
@@ -24,7 +25,7 @@
         </nav>
     </header>
     <!-- Main content area -->
-    <main>
+    <main id="main-content">
         <!-- Section element containing the content -->
         <section class="content">
             <!-- Image element with a random image from Unsplash -->
