--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <button id="skip-button">Skip to content</button>
     <!-- Header with a logo and navigation menu -->
     <header>
         <!-- Logo -->
@@ -39,7 +40,7 @@
     </header>
 
     <!-- Main content area -->
-    <main>
+    <main id="main-content">
         <!-- Section element containing the content -->
         <section class="content">
             <!-- Heading level 2 -->
