The Chuckle Factory - V1.0.1
Minor Update:
Added P tags and used CSS to align it into Center.

There could be Minor Updates here and there for fix bugs in the Webpage.
If any further error found they will be Debugged and mentioned in the Source Control and they will fixed and mentioned.
Also, how I come up with a solution and what I did to the code in able to fix that error.
There may be few updates here and there if any further errors located.

**Additional Quality of LIfe Update**

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,6 +54,13 @@
                 <p>Random Images from Unsplash</p>
             </div>
 
+            <p id="unique">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at purus leo. In hac
+                habitasse
+                platea dictumst. Aliquam nec dolor ac mauris sollicitudin aliquam. Praesent euismod consectetur diam, at
+                facilisis odio. Maecenas posuere elit sed dolor elementum, eu condimentum erat vehicula. Aliquam erat
+                volutpat. Nulla facilisi. Proin mauris diam, posuere at volutpat eu, aliquam eu nulla. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
             <!-- Button element with the text "Get Joke" -->
             <button id="joke-button">Click Me!</button>
 
