--- a/HTML/category.html
+++ b/HTML/category.html
@@ -38,6 +38,13 @@
 
             <h2>Categories:</h2>
 
+            <p id="unique">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at purus leo. In hac
+                habitasse
+                platea dictumst. Aliquam nec dolor ac mauris sollicitudin aliquam. Praesent euismod consectetur diam, at
+                facilisis odio. Maecenas posuere elit sed dolor elementum, eu condimentum erat vehicula. Aliquam erat
+                volutpat. Nulla facilisi. Proin mauris diam, posuere at volutpat eu, aliquam eu nulla. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+
             <!-- Movie Section - JOKE -->
             <ul id="categories"></ul>
             <!--TEST ZONE-->
