--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+    <title>About Us</title>
     <link rel="icon" href="https://source.unsplash.com/random/200x200?sig=1">
     <link rel="stylesheet" href="CSS/about.css">
 </head>
@@ -69,7 +69,7 @@
             <h2>Sign Up for Our Newsletter</h2>
             <p>Get the latest jokes, memes, and videos delivered straight to your inbox!</p>
             <form>
-                <label for="email-input">Email:</label>
+                <label for="email-input">Email: </label>
                 <input type="email" id="email-input" placeholder="Enter your email address" />
                 <button type="submit">Sign Up</button>
             </form>
